Markdown: fix wrapping of code block in lists

--- a/github-dark.css
+++ b/github-dark.css
@@ -475,8 +475,8 @@
   }
   /* GitHub Bug: Enable wrapping of long code lines */
   body:not(.nowrap) .blob-code-inner,
-  body:not(.nowrap) .markdown-body > pre > code,
-  body:not(.nowrap) .markdown-body > .highlight > pre {
+  body:not(.nowrap) .markdown-body pre > code,
+  body:not(.nowrap) .markdown-body .highlight > pre {
     white-space: pre-wrap !important;
     word-break: break-all !important;
     display: block !important;
